各種表示変更&単位修正&v3

--- a/src/pages/top/top.html
+++ b/src/pages/top/top.html
@@ -22,7 +22,7 @@
           <img src="assets/img/cafenecoin.png" />
         </ion-avatar>
         <h2>カフェネコイン</h2>
-        <p clear item-end>{{ maru_balance | number }} TMC</p>
+        <p clear item-end>{{ maru_balance | number }} CFC</p>
       </ion-item>
 
     <ion-item color="none" >
@@ -30,7 +30,7 @@
         <img src="assets/img/tomacoin.png" />
       </ion-avatar>
       <h2>トマコイン</h2>
-      <p clear item-end>{{ cafene_balance | number }} CFC</p>
+      <p clear item-end>{{ cafene_balance | number }} TMC</p>
     </ion-item>
 
   </ion-list>
